articles section fix <p> color contrast issues

--- a/style/_articles.scss
+++ b/style/_articles.scss
@@ -34,7 +34,8 @@
                 gap: .5rem;
                 
                 small {
-                    color: $grayish-blue;
+                    // color: $grayish-blue;
+                    color: #545463;
                     font-size: .7rem;
                 }
 
@@ -51,7 +52,8 @@
 
                 p {
                     font-size: .9rem;
-                    color: $grayish-blue;
+                    // color: $grayish-blue;
+                    color: #545463;
                 }
             }
         }
